@@ -160,7 +160,6 @@ pm-lightweight-framing=Lightweight Framing
 pm-heavyweight-framing=Heavyweight Framing
 pm-molten-framing=Heat-resistant Framing
 pm-cooling-framing=Cold-resistant Framing
-pm-basic-wiring=Basic Wiring
 pm-corrosion-resistant-tubing=Corrosion Resistant Tubing
 pm-anti-bacterial-tubing=Anti-bacterial Tubing
 pm-uncharged-voltatic-pile=Uncharged Voltatic pile
