@@ -34,6 +34,7 @@ Date: 2025-12-07
     - Changed phosphorous to be behind R-NM science, and be part of its ingredients.
     - Moved lead into its own technology, and moved it to behind P-TM science.
     - Completely rebalanced P-TM sciences recipe and ingredients.
+    - Removed basic wiring, and replaced all recipes that used it with tier-appropiate wiring.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
